...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:onClick="runicAlphabetIntent"
                    android:text="@string/runicAlphabet" />

                <Button
                    android:id="@+id/buttonletterToRuneQuiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="letterToRuneQuizIntent"
                    android:text="@string/letterToRuneQuiz" />

...
